@@ -1,8 +1,5 @@
 package site.challenger.project_challenger.security;
 
-import java.util.Arrays;
-import java.util.List;
-
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -10,14 +7,10 @@ import org.springframework.security.config.annotation.web.configuration.WebSecur
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.oauth2.client.web.OAuth2LoginAuthenticationFilter;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import jakarta.servlet.DispatcherType;
 import lombok.RequiredArgsConstructor;
 import site.challenger.project_challenger.constants.MyRole;
-import site.challenger.project_challenger.constants.SecurityConstants;
 import site.challenger.project_challenger.filter.JwtTokenValidatorFilter;
 
 @Configuration
@@ -34,9 +27,8 @@ public class SecurityConfiguration {
 	 *
 	 */
 
-	private static final String[] OPEN_URL = { "/oauth2/**", "/api/v1/postimg/**", "/api/v1/debug", "/api/v1/login/**",
-			"/api/v1/authentication/signup", "/api/v1/afterSuccess", "/userProfileImg/**", "api/v1/test/**",
-			"/admin/**" };
+	private static final String[] OPEN_URL = { "/oauth2/**", "postimg/**", "/api/**", "/userProfileImg/**",
+			"/login/**" };
 
 	@Bean
 	public WebSecurityCustomizer webSecurityCustomizer() { // security를 적용하지 않을 리소스
@@ -49,8 +41,9 @@ public class SecurityConfiguration {
 	SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
 
 		return http.sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-				// cors 설정 현재 3000허용
-				.cors(cors -> cors.configurationSource(corsConfigurationSource()))
+		// cors 설정 현재 3000허용
+//				.cors(cors -> cors.configurationSource(corsConfigurationSource()))
+				.cors(cors -> cors.disable())
 				// csrf 설정 사용안함
 				.csrf(csrf -> csrf.disable())
 				.exceptionHandling((e) -> e.authenticationEntryPoint(new JwtAuthenticationEntryPoint()))
@@ -58,8 +51,8 @@ public class SecurityConfiguration {
 				.authorizeHttpRequests(auth -> {
 					// 모든 허용
 					auth.dispatcherTypeMatchers(DispatcherType.FORWARD).permitAll().requestMatchers("/WEB-INF/**")
-							.denyAll().requestMatchers(OPEN_URL).permitAll().anyRequest()
-							.hasAnyRole(MyRole.USER, MyRole.ADMIN);
+							.denyAll().requestMatchers(OPEN_URL).permitAll().requestMatchers(SECURED_URL)
+							.hasAnyRole(MyRole.ADMIN).anyRequest().hasAnyRole(MyRole.USER, MyRole.ADMIN);
 				})
 				//
 				.headers(headers -> headers.frameOptions(fo -> fo.sameOrigin()))
@@ -75,18 +68,19 @@ public class SecurityConfiguration {
 	}
 
 	// 09.09 cors config
-	@Bean
-	public CorsConfigurationSource corsConfigurationSource() {
-		CorsConfiguration config = new CorsConfiguration();
-		config.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:8080", "http://localhost:3001")); // 허용할
-																														// 출처
-		config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE")); // 허용할 HTTP 메서드
-		config.addAllowedHeader("*"); // 허용할 헤더
-		config.setAllowCredentials(true); // 모든 인증 허용
-		config.setExposedHeaders(Arrays.asList(SecurityConstants.JWT_HEADER)); // 이 헤더로 보낼것임 jwt
-		config.setMaxAge(3600L); // cors허용 캐싱시간
-		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-		source.registerCorsConfiguration("/**", config); // 모든 경로에 대해 CORS 설정 적용
-		return source;
-	}
+//	@Bean
+//	public CorsConfigurationSource corsConfigurationSource() {
+//		CorsConfiguration config = new CorsConfiguration();
+//		config.setAllowedOrigins(List.of("http://k1m1nsu.site", "https://k1m1nsu.site", "http://k1m1nsu.site:80",
+//				"http://localhost:3000", "http://localhost:8080", "http://localhost:3001")); // 허용할
+//		// 출처
+//		config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE")); // 허용할 HTTP 메서드
+//		config.addAllowedHeader("*"); // 허용할 헤더
+//		config.setAllowCredentials(true); // 모든 인증 허용
+//		config.setExposedHeaders(Arrays.asList(SecurityConstants.JWT_HEADER)); // 이 헤더로 보낼것임 jwt
+//		config.setMaxAge(3600L); // cors허용 캐싱시간
+//		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//		source.registerCorsConfiguration("/**", config); // 모든 경로에 대해 CORS 설정 적용
+//		return source;
+//	}
 }
